--- a/application.yml
+++ b/application.yml
@@ -55,9 +55,9 @@ resilience4j:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/CarRentalSystem?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/carrentalsystem?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password: 1225
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
     hikari:
